--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,9 @@ input:focus, textarea:focus {
   font-family: 'Bitter', sans-serif;
   font-size: 35px;
 }
+.seccion h2 a{
+  color: #212F3D;
+}
 .seccion p {
   font-family: 'Roboto', sans-serif;
   font-size: 25px;
@@ -160,6 +163,16 @@ p a{
   background: url(../images/center-background.png);
   width: 100%;
   height: 400px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  text-align: center;
+
+}
+.banner-2{
+  background: url(../images/jungla.jpg);
+  width: 100%;
+  height: 700px;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -395,11 +408,11 @@ p a{
     margin-right: auto;
   }
   .Mapa{
-    background-image: url(../images/Referencias/mapa.png);
+    background-image: url(../images/Referencias/mapa2x.png);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 500px;
-    height: 500px;
+    width: 700px;
+    height: 700px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -648,14 +661,16 @@ p a{
 
 @media screen and (max-width: 710px) {
   .QR{
-    background-image: url(../images/Referencias/qr_medium.png);
+    background-image: url(../images/Referencias/qr_big.png);
     width: 350px;
     height: 350px;
   }
   .Mapa{
-    background-image: url(../images/Referencias/mapa-medium.png);
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
+  }
+  .banner-2{
+    height: 400px;
   }
   .header {
     text-align: center;
@@ -698,13 +713,15 @@ p a{
 
 @media screen and (max-width: 500px) {
   .QR{
-    background-image: url(../images/Referencias/qr_medium.png);
+    background-image: url(../images/Referencias/qr_big.png);
     width: 250px;
     height: 250px;
   }
   .Mapa{
-    background-image: url(../images/Referencias/mapa-medium.png);
     width: 300px;
+    height: 300px;
+  }
+  .banner-2{
     height: 300px;
   }
   /* portada */
